--- a/TestePIM/TestePIM.csproj
+++ b/TestePIM/TestePIM.csproj
@@ -46,11 +46,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CadastroClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroClientes.Designer.cs">
+      <DependentUpon>CadastroClientes.cs</DependentUpon>
+    </Compile>
     <Compile Include="CadastroLivros.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CadastroLivros.Designer.cs">
       <DependentUpon>CadastroLivros.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Cliente.cs" />
+    <Compile Include="EsqueciSenha.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EsqueciSenha.Designer.cs">
+      <DependentUpon>EsqueciSenha.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -58,13 +71,34 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Funcionario.cs" />
+    <Compile Include="Listas.cs" />
+    <Compile Include="Livro.cs" />
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VerificaCliente.cs" />
+    <Compile Include="VerificaFuncionario.cs" />
+    <Compile Include="VerificaLivro.cs" />
+    <EmbeddedResource Include="CadastroClientes.resx">
+      <DependentUpon>CadastroClientes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CadastroLivros.resx">
       <DependentUpon>CadastroLivros.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="EsqueciSenha.resx">
+      <DependentUpon>EsqueciSenha.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
