--- a/TestePIM/TestePIM.csproj
+++ b/TestePIM/TestePIM.csproj
@@ -52,6 +52,12 @@
     <Compile Include="CadastroClientes.Designer.cs">
       <DependentUpon>CadastroClientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="CadastroFuncionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroFuncionario.Designer.cs">
+      <DependentUpon>CadastroFuncionario.cs</DependentUpon>
+    </Compile>
     <Compile Include="CadastroLivros.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Funcionario.cs" />
+    <Compile Include="GerarIdentificacao.cs" />
     <Compile Include="Listas.cs" />
     <Compile Include="Livro.cs" />
     <Compile Include="Login.cs">
@@ -82,11 +89,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VerificaAdm.cs" />
     <Compile Include="VerificaCliente.cs" />
-    <Compile Include="VerificaFuncionario.cs" />
+    <Compile Include="VerificaFuncionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="VerificaLivro.cs" />
     <EmbeddedResource Include="CadastroClientes.resx">
       <DependentUpon>CadastroClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CadastroFuncionario.resx">
+      <DependentUpon>CadastroFuncionario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CadastroLivros.resx">
       <DependentUpon>CadastroLivros.cs</DependentUpon>
