--- a/TestePIM/TestePIM.csproj
+++ b/TestePIM/TestePIM.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,71 +49,71 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CadastroClientes.cs">
+    <Compile Include="Telas\CadastroClientes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CadastroClientes.Designer.cs">
+    <Compile Include="Telas\CadastroClientes.Designer.cs">
       <DependentUpon>CadastroClientes.cs</DependentUpon>
     </Compile>
-    <Compile Include="CadastroFuncionario.cs">
+    <Compile Include="Telas\CadastroFuncionario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CadastroFuncionario.Designer.cs">
+    <Compile Include="Telas\CadastroFuncionario.Designer.cs">
       <DependentUpon>CadastroFuncionario.cs</DependentUpon>
     </Compile>
-    <Compile Include="CadastroLivros.cs">
+    <Compile Include="Telas\CadastroLivros.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CadastroLivros.Designer.cs">
+    <Compile Include="Telas\CadastroLivros.Designer.cs">
       <DependentUpon>CadastroLivros.cs</DependentUpon>
     </Compile>
-    <Compile Include="Cliente.cs" />
-    <Compile Include="EsqueciSenha.cs">
+    <Compile Include="Dados\Cliente.cs" />
+    <Compile Include="Telas\EsqueciSenha.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EsqueciSenha.Designer.cs">
+    <Compile Include="Telas\EsqueciSenha.Designer.cs">
       <DependentUpon>EsqueciSenha.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Telas\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Telas\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Funcionario.cs" />
-    <Compile Include="GerarIdentificacao.cs" />
-    <Compile Include="Listas.cs" />
-    <Compile Include="Livro.cs" />
-    <Compile Include="Login.cs">
+    <Compile Include="Dados\Funcionario.cs" />
+    <Compile Include="Controle\GerarIdentificacao.cs" />
+    <Compile Include="Dados\Listas.cs" />
+    <Compile Include="Dados\Livro.cs" />
+    <Compile Include="Telas\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
+    <Compile Include="Telas\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VerificaAdm.cs" />
-    <Compile Include="VerificaCliente.cs" />
-    <Compile Include="VerificaFuncionario.cs">
+    <Compile Include="Controle\VerificaAdm.cs" />
+    <Compile Include="Controle\VerificaCliente.cs" />
+    <Compile Include="Controle\VerificaFuncionario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="VerificaLivro.cs" />
-    <EmbeddedResource Include="CadastroClientes.resx">
+    <Compile Include="Controle\VerificaLivro.cs" />
+    <EmbeddedResource Include="Telas\CadastroClientes.resx">
       <DependentUpon>CadastroClientes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CadastroFuncionario.resx">
+    <EmbeddedResource Include="Telas\CadastroFuncionario.resx">
       <DependentUpon>CadastroFuncionario.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CadastroLivros.resx">
+    <EmbeddedResource Include="Telas\CadastroLivros.resx">
       <DependentUpon>CadastroLivros.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EsqueciSenha.resx">
+    <EmbeddedResource Include="Telas\EsqueciSenha.resx">
       <DependentUpon>EsqueciSenha.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Telas\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
+    <EmbeddedResource Include="Telas\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -122,6 +125,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
