--- a/TestePIM/TestePIM.csproj
+++ b/TestePIM/TestePIM.csproj
@@ -59,9 +59,7 @@
     <Compile Include="Controle\Livro\VerificaLivroEditado.cs" />
     <Compile Include="Controle\Livro\VerificaLivroEditadoEstoque.cs" />
     <Compile Include="Dados\Emprestimo.cs" />
-    <Compile Include="Dados\LeituraLocal.cs" />
     <Compile Include="Dados\Multa.cs" />
-    <Compile Include="Dados\UsoComputador.cs" />
     <Compile Include="Telas\Emprestimo\AcompanhaEmp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,11 +84,11 @@
     <Compile Include="Telas\Emprestimo\Multas.Designer.cs">
       <DependentUpon>Multas.cs</DependentUpon>
     </Compile>
-    <Compile Include="Telas\Emprestimo\Pagamento.cs">
+    <Compile Include="Telas\Emprestimo\PagamentoMulta.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Telas\Emprestimo\Pagamento.Designer.cs">
-      <DependentUpon>Pagamento.cs</DependentUpon>
+    <Compile Include="Telas\Emprestimo\PagamentoMulta.Designer.cs">
+      <DependentUpon>PagamentoMulta.cs</DependentUpon>
     </Compile>
     <Compile Include="Telas\Emprestimo\RealizaEmp.cs">
       <SubType>Form</SubType>
@@ -236,9 +234,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Telas\Emprestimo\Multas.resx">
       <DependentUpon>Multas.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Telas\Emprestimo\Pagamento.resx">
-      <DependentUpon>Pagamento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Telas\Emprestimo\RealizaEmp.resx">
       <DependentUpon>RealizaEmp.cs</DependentUpon>
